- Created HideableSection - div that is hidden and shown with transition. - Used it for validation messages on form to make it less jumpy. It can also be used for other parts of forms that should sometimes be hidden. - Created a temporary Checkbox form field, based on the native input. - Other minor style fixes.

--- a/resources/js/components/ui/Modal/Modal.module.scss
+++ b/resources/js/components/ui/Modal/Modal.module.scss
@@ -8,7 +8,7 @@
   }
 
   [data-part="content"] {
-    @apply overflow-x-clip overflow-y-auto max-w-full max-h-full;
+    @apply overflow-x-clip overflow-y-auto max-w-full max-h-full mx-10;
 
     .innerContent {
       @apply bg-white rounded-lg shadow-xl p-4;
